--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ flutter:
     - assets/images/buttons/shuffle_off.svg
     - assets/images/buttons/skip_back.svg
     - assets/images/buttons/skip_forward.svg
+    - assets/images/buttons/mute.svg
+    - assets/images/buttons/share.svg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
